무기 보유시 움직임이 이상해지는 현상 수정 (질량 0.1로 설정)

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -273,7 +273,7 @@ SkeletalMeshComponent=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMe
 BP_Player_C=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform,BP_Enemy_C.Physics.ConstraintsGroup,Blueprint.Interfaces.구현된 인터페이스,CapsuleComponent.Physics.ConstraintsGroup,CameraComponent.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.Weapons,K2Node_VariableSet.DefaultValueCategory.Weapons,K2Node_VariableGet.DefaultValueCategory.Weapons
 CameraComponent=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform,BP_Enemy_C.Physics.ConstraintsGroup,Blueprint.Interfaces.구현된 인터페이스,CameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.Weapons,K2Node_VariableSet.DefaultValueCategory.Weapons,K2Node_VariableGet.DefaultValueCategory.Weapons
 K2Node_VariableGet=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform,BP_Enemy_C.Physics.ConstraintsGroup,Blueprint.Interfaces.구현된 인터페이스,CapsuleComponent.Physics.ConstraintsGroup,CameraComponent.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.Weapons,K2Node_VariableSet.DefaultValueCategory.Weapons,K2Node_VariableGet.DefaultValueCategory.Weapons
-SceneComponent=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform,BP_Enemy_C.Physics.ConstraintsGroup,Blueprint.Interfaces.구현된 인터페이스,CapsuleComponent.Physics.ConstraintsGroup,CameraComponent.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.Weapons,K2Node_VariableSet.DefaultValueCategory.Weapons,K2Node_VariableGet.DefaultValueCategory.Weapons
+SceneComponent=
 PropertyWrapper=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform,BP_Enemy_C.Physics.ConstraintsGroup,Blueprint.Interfaces.구현된 인터페이스,CapsuleComponent.Physics.ConstraintsGroup,CameraComponent.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.Weapons,K2Node_VariableSet.DefaultValueCategory.Weapons,K2Node_VariableGet.DefaultValueCategory.Weapons
 K2Node_EnhancedInputAction=SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform
 BP_Sky_Sphere2_C=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform,BP_Enemy_C.Physics.ConstraintsGroup,Blueprint.Interfaces.구현된 인터페이스,CapsuleComponent.Physics.ConstraintsGroup,CameraComponent.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.Weapons,K2Node_VariableSet.DefaultValueCategory.Weapons,K2Node_VariableGet.DefaultValueCategory.Weapons
@@ -469,10 +469,10 @@ ResonanceAudioSettings="\"Object\" "
 TcpMessagingSettings="\"Object\" "
 UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
-SkeletalMeshComponent="\"Object\" "
-SkinnedMeshComponent="\"Object\" "
-MeshComponent="\"Object\" "
-PrimitiveComponent="\"Object\" "
+SkeletalMeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+SkinnedMeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 DirectionalLight="\"Object.Light.DirectionalLightComponent.Object.Light.LightColor\" \"Object.Light.DirectionalLightComponent.Object.LightShafts.BloomTint\" "
@@ -2045,9 +2045,10 @@ OpenAssetsAtExit=/Game/Actors/Weapons/BP_WeaponManager.BP_WeaponManager
 OpenAssetsAtExit=/Game/Actors/Weapons/BP_BeamRifle.BP_BeamRifle
 OpenAssetsAtExit=/Game/Actors/Weapons/BP_NormalRifle.BP_NormalRifle
 OpenAssetsAtExit=/Game/Actors/Player/BP_Player.BP_Player
+OpenAssetsAtExit=/Game/Actors/Weapons/BP_BeamSaber.BP_BeamSaber
 
 [ContentBrowser]
-ContentBrowserDrawer.SelectedPaths=/Game/Actors/Player
+ContentBrowserDrawer.SelectedPaths=/Game/Actors/Weapons
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
@@ -3624,9 +3625,9 @@ bPinSoundConcurrencyInAssetMenu=True
 EditingModeActive=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Actors/Player/SKM_TempPlayer
-MRUItem1=/Game/Actors/Player/BP_Player
-MRUItem2=/Game/Actors/Weapons/BP_BeamSaber
+MRUItem0=/Game/Actors/Weapons/BP_BeamSaber
+MRUItem1=/Game/Actors/Player/SKM_TempPlayer
+MRUItem2=/Game/Actors/Player/BP_Player
 MRUItem3=/Game/Actors/Weapons/BP_WeaponBase
 MRUItem4=/Game/Actors/Weapons/BP_NormalRifle
 MRUItem5=/Game/Actors/Weapons/BP_BeamRifle
