공격을 활성화됐을때만 하도록 변경

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -290,7 +290,7 @@ SkeletalMeshComponent=
 BP_Player_C=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform,BP_Enemy_C.Physics.ConstraintsGroup,Blueprint.Interfaces.구현된 인터페이스,CapsuleComponent.Physics.ConstraintsGroup,CameraComponent.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.Weapons,K2Node_VariableSet.DefaultValueCategory.Weapons,K2Node_VariableGet.DefaultValueCategory.Weapons
 CameraComponent=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform,BP_Enemy_C.Physics.ConstraintsGroup,Blueprint.Interfaces.구현된 인터페이스,CameraComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.Weapons,K2Node_VariableSet.DefaultValueCategory.Weapons,K2Node_VariableGet.DefaultValueCategory.Weapons
 K2Node_VariableGet=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform,BP_Enemy_C.Physics.ConstraintsGroup,Blueprint.Interfaces.구현된 인터페이스,CapsuleComponent.Physics.ConstraintsGroup,CameraComponent.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.Weapons,K2Node_VariableSet.DefaultValueCategory.Weapons,K2Node_VariableGet.DefaultValueCategory.Weapons
-SceneComponent=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform,BP_Enemy_C.Physics.ConstraintsGroup,Blueprint.Interfaces.구현된 인터페이스,CapsuleComponent.Physics.ConstraintsGroup,CameraComponent.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.Weapons,K2Node_VariableSet.DefaultValueCategory.Weapons,K2Node_VariableGet.DefaultValueCategory.Weapons
+SceneComponent=
 PropertyWrapper=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform,BP_Enemy_C.Physics.ConstraintsGroup,Blueprint.Interfaces.구현된 인터페이스,CapsuleComponent.Physics.ConstraintsGroup,CameraComponent.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.Weapons,K2Node_VariableSet.DefaultValueCategory.Weapons,K2Node_VariableGet.DefaultValueCategory.Weapons
 K2Node_EnhancedInputAction=SkeletalMeshComponent.TransformCommon.Transform,SpringArmComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform
 BP_Sky_Sphere2_C=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform,BP_Enemy_C.Physics.ConstraintsGroup,Blueprint.Interfaces.구현된 인터페이스,CapsuleComponent.Physics.ConstraintsGroup,CameraComponent.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.Weapons,K2Node_VariableSet.DefaultValueCategory.Weapons,K2Node_VariableGet.DefaultValueCategory.Weapons
@@ -325,7 +325,7 @@ TargetPoint=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponen
 DirectionalLight=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform,BP_Enemy_C.Physics.ConstraintsGroup,Blueprint.Interfaces.구현된 인터페이스,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.Weapons,K2Node_VariableSet.DefaultValueCategory.Weapons,K2Node_VariableGet.DefaultValueCategory.Weapons
 ChildActorComponent=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform,BP_Enemy_C.Physics.ConstraintsGroup,Blueprint.Interfaces.구현된 인터페이스,CapsuleComponent.Physics.ConstraintsGroup,CameraComponent.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.Weapons,K2Node_VariableSet.DefaultValueCategory.Weapons,K2Node_VariableGet.DefaultValueCategory.Weapons
 BP_CharacterBase_C=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform,BP_Enemy_C.Physics.ConstraintsGroup,Blueprint.Interfaces.구현된 인터페이스,CapsuleComponent.Physics.ConstraintsGroup,CameraComponent.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.Weapons,K2Node_VariableSet.DefaultValueCategory.Weapons,K2Node_VariableGet.DefaultValueCategory.Weapons
-BP_BeamRifle_C=
+BP_BeamRifle_C=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform,BP_Enemy_C.Physics.ConstraintsGroup,Blueprint.Interfaces.구현된 인터페이스,CapsuleComponent.Physics.ConstraintsGroup,CameraComponent.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.Weapons,K2Node_VariableSet.DefaultValueCategory.Weapons,K2Node_VariableGet.DefaultValueCategory.Weapons
 BP_BeamSaber_C=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform,BP_Enemy_C.Physics.ConstraintsGroup,Blueprint.Interfaces.구현된 인터페이스,CapsuleComponent.Physics.ConstraintsGroup,CameraComponent.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.Weapons,K2Node_VariableSet.DefaultValueCategory.Weapons,K2Node_VariableGet.DefaultValueCategory.Weapons
 PersonaPreviewSceneAnimationController=
 BoxComponent=SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SkeletalMeshComponent.Physics.ConstraintsGroup,SpringArmComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform,BP_Enemy_C.Physics.ConstraintsGroup,Blueprint.Interfaces.구현된 인터페이스,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.Weapons,K2Node_VariableSet.DefaultValueCategory.Weapons,K2Node_VariableGet.DefaultValueCategory.Weapons
@@ -2204,7 +2204,7 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -2230,9 +2230,13 @@ RecentAssetEditors=Behavior Tree
 RecentAssetEditors=Behavior Tree
 RecentAssetEditors=BlueprintEditor
 OpenAssetsAtExit=/Game/UI/HUD_GundamFps.HUD_GundamFps
+OpenAssetsAtExit=/Game/Actors/Weapons/BP_WeaponManager.BP_WeaponManager
+OpenAssetsAtExit=/Game/Actors/Weapons/BP_BeamRifle.BP_BeamRifle
+OpenAssetsAtExit=/Game/Actors/Weapons/BP_NormalRifle.BP_NormalRifle
+OpenAssetsAtExit=/Game/Actors/Weapons/BP_BeamSaber.BP_BeamSaber
 
 [ContentBrowser]
-ContentBrowserDrawer.SelectedPaths=/Game/UI
+ContentBrowserDrawer.SelectedPaths=/Game/Actors/Weapons
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
@@ -3809,12 +3813,12 @@ bPinSoundConcurrencyInAssetMenu=True
 EditingModeActive=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/HUD_GundamFps
+MRUItem0=/Game/Actors/Weapons/BP_BeamSaber
 MRUItem1=/Game/Actors/Weapons/BP_NormalRifle
-MRUItem2=/Game/Actors/Weapons/BP_BeamSaber
-MRUItem3=/Game/Actors/Weapons/BP_BeamRifle
-MRUItem4=/Game/Actors/Weapons/BP_WeaponBase
-MRUItem5=/Game/Actors/Weapons/BP_WeaponManager
+MRUItem2=/Game/Actors/Weapons/BP_BeamRifle
+MRUItem3=/Game/Actors/Weapons/BP_WeaponManager
+MRUItem4=/Game/UI/HUD_GundamFps
+MRUItem5=/Game/Actors/Weapons/BP_WeaponBase
 MRUItem6=/Game/UI/WBP_BeamSaber
 MRUItem7=/Game/UI/WBP_NormalRifle
 MRUItem8=/Game/Actors/Player/BP_Player
